# Beaver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Beaver/: Beaver.vcxproj  Beaver.vcxproj.filters  Header.h  Source.cpp  dual.h
